--- a/我的海豹/index.html
+++ b/我的海豹/index.html
@@ -27,7 +27,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" style="font-family: Microsoft JhengHei;" href="#page-top">大海豹曬卡區</a>
+      <a class="navbar-brand js-scroll-trigger" style="font-family: Microsoft JhengHei;" href="#page-top">大海豹部落格</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -167,7 +167,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/catseal1.jpg" alt="">
+            <img class="img-fluid" src="img/斑海豹.jpg" alt="">
           </div>
         </div>
 
@@ -191,7 +191,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/catseal2.jpg" alt="">
+            <img class="img-fluid" src="img/象鼻r.jpg" alt="">
           </div>
         </div>
 
