--- a/我的海豹/signup.html
+++ b/我的海豹/signup.html
@@ -1,55 +1,117 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Signup</title>
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/5.7.1/firebase.js"></script>
-	<script>
-	  // Initialize Firebase
-	  var config = {
-    apiKey: "AIzaSyA02sOksBaRSSoOHNljhc9UOZ1HwOjkMHE",
-    authDomain: "ajax-450ed.firebaseapp.com",
-    databaseURL: "https://ajax-450ed.firebaseio.com",
-    projectId: "ajax-450ed",
-    storageBucket: "ajax-450ed.appspot.com",
-    messagingSenderId: "467755978195",
- //   appId: "1:467755978195:web:f9faa0670a627c3050b326",
-//    measurementId: "G-Z6JLE0RFZV"
+<html lang="en">
 
-	  };
-	  firebase.initializeApp(config);
-	</script>
+<head>
 
-    <script> 
-        $(document).ready(function(){  
-            $("#SignUp").click(function(){
-                var email         = $('#email').val();
-                var password    = $('#pwd').val();
-                firebase.auth().createUserWithEmailAndPassword(email, password).catch((error) => {
-                  // Handle Errors here.
-                  const errorCode = error.code;
-                  const errorMessage = error.message;
-                  // ...
-                  alert(errorMessage)
-                }).then(function (error) { if (error.code != 400) alert("成功創建用戶認證！"); });
-                window.location.href = "./index.html"
-            });                         
-        });         
-    </script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-  </head>
-  
-  <body>
-    <div>
-    <h1>大海豹註冊專區</h1>
+  <title>非洲海豹與他的曬卡小夥伴</title>
+
+  <!-- Custom fonts for this theme -->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+
+  <!-- Theme CSS -->
+  <link href="css/freelancer.min.css" rel="stylesheet">
+  <link href="css/one-page-wonder.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Signin</title>
+  <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.7.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyA02sOksBaRSSoOHNljhc9UOZ1HwOjkMHE",
+      authDomain: "ajax-450ed.firebaseapp.com",
+      databaseURL: "https://ajax-450ed.firebaseio.com",
+      projectId: "ajax-450ed",
+      storageBucket: "ajax-450ed.appspot.com",
+      messagingSenderId: "467755978195",
+    };
+    firebase.initializeApp(config);
+  </script>
+
+<script> 
+    $(document).ready(function(){  
+        $("#SignUp").click(function(){
+            var email         = $('#email').val();
+            var password    = $('#pwd').val();
+            firebase.auth().createUserWithEmailAndPassword(email, password).catch((error) => {
+              // Handle Errors here.
+              const errorCode = error.code;
+              const errorMessage = error.message;
+              // ...
+              alert(errorMessage)
+            }).then(function (error) { if (error.code != 400) 
+              console.log(error.user.email);
+            alert("成功創建用戶認證！"); });
+            //window.location.href = "./index.html"
+        });                         
+    });         
+</script>
+
+
+</head>
+
+<body id="page-top">
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+    <div class="container">
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+          <h1 class="navbar-brand js-scroll-trigger" style="font-family: Microsoft JhengHei;">大海豹註冊專區</h1>
+        <ul class="navbar-nav ml-auto">
+                <div>
+                 <input type="text" id="name"      placeholder="匿名"/>
+                 <input type="text" id="email"      placeholder="Email"/>
+                 <input type="text" id="pwd"       placeholder="密碼"/>
+                </div>
+                <button id="SignUp">註冊</button><br><br>  
+            
+        </ul>
+      </div>
     </div>
-    <div>
-     <p><input type="text" id="name"      placeholder="匿名"/></p>
-     <p><input type="text" id="email"      placeholder="Email"/></p>
-     <p><input type="text" id="pwd"       placeholder="密碼"/></p>
-    </div>
-    <button id="SignUp">註冊</button><br><br>  
+  </nav>
 
-  </body>
-</html>
+  <!-- Masthead -->
+  <header class="masthead bg-primary text-white text-center" style=" background-image:url('img/seal.gif') " >
+    <div class="container d-flex align-items-center flex-column">
+        <img class="masthead-avatar mb-5" src="img/seal2.gif" alt="">
+    </div>
+  </header>
+
+
+  <!-- About Section -->
+  <section class="page-section bg-primary text-white mb-0" id="about" style=" background-image:url('img/seal3.gif') ">
+    <div class="container">
+            <div class="divider-custom divider-light">
+                    </div>
+                    <div class="divider-custom-line"></div>
+                  </div>
+    </div>
+  </section>
+
+  <!-- Portfolio Section -->
+  <!-- <section class="page-section portfolio" id="portfolio"> -->
+    <div class="container">
+
+      <!-- Portfolio Section Heading -->
+
+      <!-- Icon Divider -->
+      <div class="divider-custom">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+          <i class="fas fa-star"></i>
+        </div>
+        <div class="divider-custom-line"></div>
+      </div>
+
+      <!-- Portfolio Grid Items -->
+     
+    </body>
+
+    </html>
