--- a/我的海豹/signin.html
+++ b/我的海豹/signin.html
@@ -53,7 +53,7 @@
             if (user) {
               userLogin = user;
               alert("User is logined")
-              window.location.href = "./signinindex.html\?error.name"
+              window.location.href = "./signinindex.html"
             } else {
               userLogin = null;
               alert("User is not logined yet.");
