--- a/我的海豹/signup.html
+++ b/我的海豹/signup.html
@@ -49,7 +49,7 @@
             }).then(function (error) { if (error.code != 400) 
               console.log(error.user.email);
             alert("成功創建用戶認證！"); });
-            //window.location.href = "./index.html"
+            window.location.href = "./index.html"
         });                         
     });         
 </script>
@@ -66,7 +66,7 @@
           <h1 class="navbar-brand js-scroll-trigger" style="font-family: Microsoft JhengHei;">大海豹註冊專區</h1>
         <ul class="navbar-nav ml-auto">
                 <div>
-                 <input type="text" id="name"      placeholder="匿名"/>
+                 <!-- <input type="text" id="name"      placeholder="匿名"/> -->
                  <input type="text" id="email"      placeholder="Email"/>
                  <input type="text" id="pwd"       placeholder="密碼"/>
                 </div>
