--- a/我的海豹/signinindex.html
+++ b/我的海豹/signinindex.html
@@ -44,7 +44,7 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  style="font-family: Microsoft JhengHei;">小夥伴們</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" id="name" href="./index.html" style="font-family: Microsoft JhengHei;">null</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" id="name" href="./index.html" style="font-family: Microsoft JhengHei;">登出</a>
               </li>
         </ul>
       </div>
