--- a/我的海豹/signin.html
+++ b/我的海豹/signin.html
@@ -46,14 +46,14 @@
                 const errorMessage = error.message;
                 // ...
                 alert(errorMessage)
-              })
+              }).then(function (error){if(error.code != 400)location.herf="./signinindex.html"})
           });
           var userLogin;
           firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
               userLogin = user;
               alert("User is logined")
-              window.location.href = "./signinindex.html"
+
             } else {
               userLogin = null;
               alert("User is not logined yet.");
